# dmsys

./: .gitignore  collaboration.txt  flake.nix  meson.build  specs  specs.txt
src/: common.c  common.h  main.c  meson.build  utils.c  utils.h
src/client/: client.c  client.h  meson.build
src/server/: fares.c  meson.build  server.c  server.h  servermsgq.c  serverpipe.c  servershm.c
src/transport/: core_transport.c  meson.build  msgq.c  pipe.c  shm.c  transport.h
